# Consensus-KoTH

./: .gitattributes  .gitignore  README.md  docker-compose.yml  pyproject.toml  rotate.sh
.claude/prompts/: reimplement-h5-h8.md
Series H1/: docker-compose.yml  readme.md
Series H2/machineH2C/: Dockerfile
Series H3/machineH3A/: Dockerfile
Series H3/machineH3B/: Dockerfile
Series H3/machineH3C/: Dockerfile
Series H4/machineH4A/: Dockerfile
Series H4/machineH4B/: Dockerfile
Series H4/machineH4C/: Dockerfile
Series H6/: docker-compose.yml
Series H6/machineH6A/: start.sh
Series H8/machineH8A/: Dockerfile
docs/: AUDIT.md  CODE_REVIEW.md  TESTING_AUDIT.md  deployment-validation-checklist.md  full-deployment-runbook.md  haproxy-full-config.md
machineH1A/: Dockerfile  setup.sh
machineH1B/: Dockerfile
machineH1C/: Dockerfile  vsftpd.conf
machineH3B/: Dockerfile
machineH4A/: Dockerfile
machineH4B/: Dockerfile  run.sh
machineH5A/: Dockerfile
machineH5B/: Dockerfile  start.sh
machineH5C/: Dockerfile
machineH6A/: Dockerfile  start.sh
machineH6B/: Dockerfile  seed.js  start.sh
machineH6C/: Dockerfile  heartbleed-stub.py  start.sh
machineH7A/: Dockerfile  start.sh
machineH7B/: Dockerfile  grafana-stub.py  start.sh
machineH7C/: Dockerfile  rsyncd.conf
machineH8A/: Dockerfile  mysql-setup.sql  start.sh
machineH8B/: Dockerfile
machineH8C/: Dockerfile
qa/: common.py  koth_load_sim.py  load_suite.py  vuln_suite.py
qa/deployment/: README.md  configure_koth_ufw.sh  prebuild_series_cache.sh  validate_koth_node.sh  validate_referee_lb.sh  validate_rule_matrix_live.py
referee-server/: _runtime_baselines.py  _runtime_compose.py  _runtime_haproxy.py  app.py  config.py  conftest.py  db.py  detectors.py  enforcer.py  models.py  poller.py  requirements.txt  rules.default.yaml  rules.py  scheduler.py  scheduler_errors.py
referee-server/static/: style.css
referee-server/templates/: dashboard.html  leaderboard.html  participant.html
referee-server/tests/: conftest.py  test_scoring_and_drift.py
referee-server/tests/chaos/: test_concurrent_claims.py  test_rotation_race.py  test_ssh_partial_failure.py
referee-server/tests/integration/: test_api.py  test_api_helpers.py  test_lifecycle.py
referee-server/tests/unit/: test_config_validation.py  test_db.py  test_detectors.py  test_dotenv_loader.py  test_doubles.py  test_enforcer.py  test_poller_parsing.py  test_rules.py  test_runtime_mixins.py  test_scorer.py  test_ssh_client.py  test_ssh_client_failures.py  test_webhook.py
