[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# This project is run directly from source; there is no wheel. The [project]
# table exists only so tooling (ruff, mypy, coverage) has a canonical home.
# ---------------------------------------------------------------------------
[project]
name = "consensus-koth"
version = "0.1.0"
description = "Distributed King of the Hill cyber range with a quorum-based referee."
readme = "README.md"
requires-python = ">=3.12"

# ---------------------------------------------------------------------------
# pytest
#
# testpaths    — the referee test tree is the authoritative suite.
# addopts      — strict markers and config catch typos in test names/options.
# xfail_strict — a passing xfail should be surfaced as a failure so expected
#                failures that silently start passing do not become noise.
# markers      — chaos tests are deselected by default; CI nightly can opt in
#                with `pytest -m chaos`.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["referee-server/tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    # Chaos tests exercise multi-team races, rotation interleavings, and
    # SSH-partial-failure scenarios. They're useful but slower-to-read
    # than the unit/integration layer, so they are deselected by default
    # and opted into with ``pytest -m chaos`` or ``pytest -m ""`` (the
    # second ``-m`` overrides this one per pytest's marker-expression
    # semantics).
    "-m",
    "not chaos",
]
xfail_strict = true
markers = [
    "unit: fast, hermetic tests with no disk or network",
    "integration: exercise the real DB/runtime stack",
    "chaos: deselected by default; run with -m chaos nightly",
]

# ---------------------------------------------------------------------------
# coverage
#
# source       — only referee-server is in scope for the coverage gate; qa/
#                scripts are operational probes, not unit-tested code.
# branch       — branch coverage is more honest than line for a control plane.
# fail_under   — Current total coverage is ~89% after the scheduler
#                god-class split into _runtime_compose.py /
#                _runtime_haproxy.py / _runtime_baselines.py mixins,
#                each with direct unit tests. Per-module: enforcer /
#                webhook / models / runtime_logging / scorer /
#                detectors / scheduler_errors at 100%;
#                _runtime_baselines at 98%; rules / db / config at 96%+;
#                ssh_client at 95%; app at 93%; _runtime_compose at
#                82%; poller at 78%; scheduler at 74%; _runtime_haproxy
#                at 62% (the remaining gap is the UNIX-socket call
#                paths that need a real HAProxy admin socket).
#
#                fail_under = 85 with ~4% headroom against branch-
#                counting flakes. The remaining drag is the
#                scheduler-lifecycle deploy/recover branches that need
#                per-method integration scenarios beyond what the
#                current chaos suite covers.
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["referee-server"]
omit = [
    "referee-server/tests/*",
    "referee-server/conftest.py",
    "referee-server/setup_cli.py",
    "referee-server/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
fail_under = 85
exclude_also = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ---------------------------------------------------------------------------
# Optional development dependencies. Keep them out of requirements.txt so
# production referee-server installs stay minimal. Install with:
#
#     pip install -e '.[dev]'
# ---------------------------------------------------------------------------
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "coverage[toml]>=7.6",
]
